--- a/my_react_app/package.json
+++ b/my_react_app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "material-components-web": "^1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-json-table": "^0.1.1",
+    "react-paginate": "^6.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
   },
@@ -33,7 +35,7 @@
     "express": "^4.16.4",
     "express-pino-logger": "^4.0.0",
     "node-env-run": "^3.0.2",
-    "nodemon": "^1.18.10",
+    "nodemon": "^1.18.11",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^1.4.4"
   }
